# stripe-rag

./: .gitignore  README.md  pyproject.toml
backend/: main.py
backend/src/: evaluator.py  generator.py  ingest.py  rag_pipeline.py  retriever.py
data/: eval_questions.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AnswerCard.tsx  ChunkRow.tsx  CodeBlock.tsx  ExampleChip.tsx  InspectorPanel.tsx  MetricCard.tsx  PipelineCard.tsx  QueryCard.tsx  StatusPill.tsx  TopBar.tsx
frontend/lib/: api.ts  mock.ts
scripts/: run_ingest.py
